# meeting_agent_poc

./: .gitignore  ENHANCEMENT_SUMMARY.md  GEMINI_INTEGRATION.md  README.md  commans.sh  debug_crew.py  examples.py  meeting_report_meeting123.md  meeting_report_meeting124.md  meeting_report_test-meeting-001.md  pyproject.toml  report.md  requirements.txt  run_meeting_agent.py  test_end_to_end.py  test_enhanced_system.py  test_gemini_integration.py  test_installation.py  test_simplified.py  transcription_meeting123.txt  transcription_meeting124.txt  transcription_test-meeting-001.txt
src/meeting_agent_poc/: agentops_config.py  crew.py  main.py
src/meeting_agent_poc/config/: agents.yaml  crews.yaml  tasks.yaml
src/meeting_agent_poc/tools/: __init__.py  custom_tool.py  gemini_video_tool.py  user_preferences.py
