[project]
name = "meeting_agent_poc"
version = "0.1.0"
description = "meeting-agent-poc using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
meeting_agent_poc = "meeting_agent_poc.main:run"
run_crew = "meeting_agent_poc.main:run"
train = "meeting_agent_poc.main:train"
replay = "meeting_agent_poc.main:replay"
test = "meeting_agent_poc.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
